# tdad-paper-code

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
docker/: compiler.Dockerfile  entrypoint.sh  runtime.Dockerfile
docs/: TESTSMITH_GUIDELINES.md
mutation_packs/core/: mutations.yaml
results/: aggregated.json  all_runs.json  datainsights_v1_20260201_103657.json  datainsights_v1_20260201_132053.json  datainsights_v1_20260201_143348.json  datainsights_v2_20260201_103657.json  datainsights_v2_20260201_132053.json  datainsights_v2_20260201_143348.json  expenseguard_v1_20260127_144357.json  expenseguard_v1_20260127_165101.json  expenseguard_v1_20260128_103940.json  expenseguard_v2_20260127_144357.json  expenseguard_v2_20260127_165101.json  expenseguard_v2_20260128_103940.json  incidentrunbook_v1_20260201_171436.json  incidentrunbook_v1_20260201_183057.json  incidentrunbook_v1_20260201_203207.json  incidentrunbook_v2_20260201_171436.json  incidentrunbook_v2_20260201_183057.json  incidentrunbook_v2_20260201_203207.json  supportops_v1_20260128_130124.json  supportops_v1_20260128_153437.json  supportops_v1_20260129_144143.json  supportops_v2_20260128_130124.json  supportops_v2_20260128_153437.json  supportops_v2_20260129_144143.json
scripts/: aggregate_results.py  compile_prompt.py  generate_results.py  run_agent.py  run_mutation_testing.py  run_pipeline.sh  test_with_sdk.py  testsmith.py
tdadlib/assertions/: branching.py  json_contract.py  pii.py  (+1 more)
tests_hidden/: conftest.py
tests_visible/: conftest.py
(+53 files in other folders)
